Comparing multiple methods

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -728,10 +728,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 1         | 2        | 0.027017     | 4074878.213096     | 236378.596455 |</pre>"
+       "<pre>| 1         | 2        | 0.017523     | 4074878.213096     | 236378.596455 |</pre>"
       ],
       "text/plain": [
-       "| 1         | 2        | 0.027017     | 4074878.213096     | 236378.596455 |"
+       "| 1         | 2        | 0.017523     | 4074878.213096     | 236378.596455 |"
       ]
      },
      "metadata": {},
@@ -906,10 +906,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>| 1         | 2        | 0.025018     | 4014170.932927     | 235190.935428 |</pre>"
+       "<pre>| 1         | 2        | 0.022013     | 4014170.932927     | 235190.935428 |</pre>"
       ],
       "text/plain": [
-       "| 1         | 2        | 0.025018     | 4014170.932927     | 235190.935428 |"
+       "| 1         | 2        | 0.022013     | 4014170.932927     | 235190.935428 |"
       ]
      },
      "metadata": {},
@@ -988,10 +988,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Number of features          : 9</pre>"
+       "<pre>Number of features          : 8</pre>"
       ],
       "text/plain": [
-       "Number of features          : 9"
+       "Number of features          : 8"
       ]
      },
      "metadata": {},
@@ -1000,10 +1000,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Number of unpacked features : 9</pre>"
+       "<pre>Number of unpacked features : 8</pre>"
       ],
       "text/plain": [
-       "Number of unpacked features : 9"
+       "Number of unpacked features : 8"
       ]
      },
      "metadata": {},
@@ -1012,99 +1012,30 @@
     {
      "data": {
       "text/html": [
-       "<pre>Number of coefficients    : 10</pre>"
+       "<pre>Number of coefficients    : 9</pre>"
       ],
       "text/plain": [
-       "Number of coefficients    : 10"
+       "Number of coefficients    : 9"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>Starting Newton Method</pre>"
-      ],
-      "text/plain": [
-       "Starting Newton Method"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>--------------------------------------------------------</pre>"
-      ],
-      "text/plain": [
-       "--------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
-      ],
-      "text/plain": [
-       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>| 1         | 2        | 0.020024     | 3193229.177894     | 228200.043155 |</pre>"
-      ],
-      "text/plain": [
-       "| 1         | 2        | 0.020024     | 3193229.177894     | 228200.043155 |"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
-      ],
-      "text/plain": [
-       "+-----------+----------+--------------+--------------------+---------------+"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "# Learn the three models: (don't forget to set validation_set = None)\n",
+    "model1 = graphlab.linear_regression.create(train_data, target = 'price', features = model_1_features, validation_set = None)\n",
+    "model2 = graphlab.linear_regression.create(train_data, target = 'price', features = model_2_features, validation_set = None)\n",
+    "model3 = graphlab.linear_regression.create(train_data, target = 'price', features = model_3_features, validation_set = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1126,22 +1057,7 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Learn the three models: (don't forget to set validation_set = None)\n",
-    "model1 = graphlab.linear_regression.create(train_data, target = 'price', features = model_1_features, validation_set = None)\n",
-    "model2 = graphlab.linear_regression.create(train_data, target = 'price', features = model_2_features, validation_set = None)\n",
-    "model3 = graphlab.linear_regression.create(train_data, target = 'price', features = model_3_features, validation_set = None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1174,18 +1090,17 @@
       "+------------------+-------+----------------+---------------+\n",
       "|       name       | index |     value      |     stderr    |\n",
       "+------------------+-------+----------------+---------------+\n",
-      "|   (intercept)    |  None | -52974974.0602 |  1615194.9439 |\n",
-      "|   sqft_living    |  None | 529.196420564  | 7.69913498511 |\n",
-      "|     bedrooms     |  None | 28948.5277313  | 9395.72889106 |\n",
-      "|    bathrooms     |  None |  65661.207231  | 10795.3380703 |\n",
-      "|       lat        |  None | 704762.148408  | 1292011141.66 |\n",
-      "|       long       |  None | -137780.01994  | 1292011141.57 |\n",
-      "|  bed_bath_rooms  |  None | -8478.36410518 | 2858.95391257 |\n",
-      "| bedrooms_squared |  None | -6072.38466067 | 1494.97042777 |\n",
-      "| log_sqft_living  |  None | -563467.784269 | 17567.8230814 |\n",
-      "|  lat_plus_long   |  None | -83217.1979248 | 1292011141.58 |\n",
+      "|   (intercept)    |  None | -50038410.4906 | 1616114.81749 |\n",
+      "|   sqft_living    |  None |  528.95727944  | 7.70351973833 |\n",
+      "|     bedrooms     |  None | 28149.0253087  | 9401.07987563 |\n",
+      "|    bathrooms     |  None | 65079.7795681  | 10801.4861497 |\n",
+      "|       lat        |  None | 630546.220291  | 12698.9593798 |\n",
+      "|       long       |  None | -193589.425715 | 12911.7695552 |\n",
+      "|  bed_bath_rooms  |  None | -8419.01013963 | 2860.58212241 |\n",
+      "| bedrooms_squared |  None | -5946.00395319 | 1495.82183204 |\n",
+      "| log_sqft_living  |  None | -565139.781488 | 17577.8281753 |\n",
       "+------------------+-------+----------------+---------------+\n",
-      "[10 rows x 4 columns]\n",
+      "[9 rows x 4 columns]\n",
       "\n"
      ]
     }
@@ -1230,13 +1145,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS of model 1 on training data: 9.71328233544e+14\n",
+      "RSS of model 2 on training data: 9.61592067856e+14\n",
+      "RSS of model 3 on training data: 9.06359905039e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the RSS on TRAINING data for each of the three models and record the values:\n"
+    "# Compute the RSS on TRAINING data for each of the three models and record the values:\n",
+    "rss_model1 = get_residual_sum_of_squares(model1, train_data, train_data['price'])\n",
+    "rss_model2 = get_residual_sum_of_squares(model2, train_data, train_data['price'])\n",
+    "rss_model3 = get_residual_sum_of_squares(model3, train_data, train_data['price'])\n",
+    "\n",
+    "print('RSS of model 1 on training data: '+str(rss_model1))\n",
+    "print('RSS of model 2 on training data: '+str(rss_model2))\n",
+    "print('RSS of model 3 on training data: '+str(rss_model3))"
    ]
   },
   {
@@ -1255,13 +1187,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RSS of model 1 on test data: 2.26568089093e+14\n",
+      "RSS of model 2 on test data: 2.24368799994e+14\n",
+      "RSS of model 3 on test data: 2.5075312308e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute the RSS on TESTING data for each of the three models and record the values:\n"
+    "# Compute the RSS on TESTING data for each of the three models and record the values:\n",
+    "rss_model1 = get_residual_sum_of_squares(model1, test_data, test_data['price'])\n",
+    "rss_model2 = get_residual_sum_of_squares(model2, test_data, test_data['price'])\n",
+    "rss_model3 = get_residual_sum_of_squares(model3, test_data, test_data['price'])\n",
+    "\n",
+    "print('RSS of model 1 on test data: '+str(rss_model1))\n",
+    "print('RSS of model 2 on test data: '+str(rss_model2))\n",
+    "print('RSS of model 3 on test data: '+str(rss_model3))"
    ]
   },
   {
