Convert to Numpy Array

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -58,11 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1490904911.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -94,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -129,11 +144,11 @@
     "    # add the column 'constant' to the front of the features list so that we can extract it along with the others:\n",
     "    features = ['constant'] + features # this is how you combine two lists\n",
     "    # select the columns of data_SFrame given by the features list into the SFrame features_sframe (now including constant):\n",
-    "\n",
+    "    features_sframe = data_sframe[features]\n",
     "    # the following line will convert the features_SFrame into a numpy matrix:\n",
     "    feature_matrix = features_sframe.to_numpy()\n",
     "    # assign the column of data_sframe associated with the output to the SArray output_sarray\n",
-    "\n",
+    "    output_sarray = data_sframe[output]\n",
     "    # the following will convert the SArray into a numpy array by first converting it to a list\n",
     "    output_array = output_sarray.to_numpy()\n",
     "    return(feature_matrix, output_array)"
@@ -148,11 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.00000000e+00   1.18000000e+03]\n",
+      "221900.0\n"
+     ]
+    }
+   ],
    "source": [
     "(example_features, example_output) = get_numpy_data(sales, ['sqft_living'], 'price') # the [] around 'sqft_living' makes it a list\n",
     "print example_features[0,:] # this accesses the first row of the data the ':' indicates 'all columns'\n",
