--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -199,11 +199,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1181.0\n"
+     ]
+    }
+   ],
    "source": [
     "my_weights = np.array([1., 1.]) # the example weights\n",
     "my_features = example_features[0,] # we'll use the first data point\n",
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +237,8 @@
     "def predict_output(feature_matrix, weights):\n",
     "    # assume feature_matrix is a numpy matrix containing the features as columns and weights is a corresponding numpy array\n",
     "    # create the predictions vector by using np.dot()\n",
-    "\n",
+    "    predictions = np.dot(feature_matrix, weights)\n",
+    "    \n",
     "    return(predictions)"
    ]
   },
@@ -242,11 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1181.0\n",
+      "2571.0\n"
+     ]
+    }
+   ],
    "source": [
     "test_predictions = predict_output(example_features, my_weights)\n",
     "print test_predictions[0] # should be 1181.0\n",
