Computing the Derivative

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -314,6 +314,7 @@
     "def feature_derivative(errors, feature):\n",
     "    # Assume that errors and feature are both numpy arrays of the same length (number of data points)\n",
     "    # compute twice the dot product of these vectors as 'derivative' and return the value\n",
+    "    derivative = 2*np.dot(errors, feature)\n",
     "\n",
     "    return(derivative)"
    ]
@@ -327,11 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-23345850022.0\n",
+      "-23345850022.0\n"
+     ]
+    }
+   ],
    "source": [
     "(example_features, example_output) = get_numpy_data(sales, ['sqft_living'], 'price') \n",
     "my_weights = np.array([0., 0.]) # this makes all the predictions 0\n",
