Add Gradient Descent method

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -396,19 +396,19 @@
     "    weights = np.array(initial_weights) # make sure it's a numpy array\n",
     "    while not converged:\n",
     "        # compute the predictions based on feature_matrix and weights using your predict_output() function\n",
-    "\n",
+    "        predictions = predict_output(feature_matrix, weights)\n",
     "        # compute the errors as predictions - output\n",
-    "\n",
+    "        errors = predictions - output\n",
     "        gradient_sum_squares = 0 # initialize the gradient sum of squares\n",
     "        # while we haven't reached the tolerance yet, update each feature's weight\n",
     "        for i in range(len(weights)): # loop over each weight\n",
     "            # Recall that feature_matrix[:, i] is the feature column associated with weights[i]\n",
     "            # compute the derivative for weight[i]:\n",
-    "\n",
+    "            derivative = feature_derivative(feature_matrix[:, i])\n",
     "            # add the squared value of the derivative to the gradient sum of squares (for assessing convergence)\n",
-    "\n",
+    "            gradient_sum_squares += math.sqrt(derivative)\n",
     "            # subtract the step size times the derivative from the current weight\n",
-    "            \n",
+    "            weights = weights - step_size*derivative\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient magnitude:\n",
     "        gradient_magnitude = sqrt(gradient_sum_squares)\n",
     "        if gradient_magnitude < tolerance:\n",
