--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-2-blank.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -398,17 +398,17 @@
     "        # compute the predictions based on feature_matrix and weights using your predict_output() function\n",
     "        predictions = predict_output(feature_matrix, weights)\n",
     "        # compute the errors as predictions - output\n",
-    "        errors = predictions - output\n",
+    "        errors = np.subtract(predictions, output)\n",
     "        gradient_sum_squares = 0 # initialize the gradient sum of squares\n",
     "        # while we haven't reached the tolerance yet, update each feature's weight\n",
     "        for i in range(len(weights)): # loop over each weight\n",
     "            # Recall that feature_matrix[:, i] is the feature column associated with weights[i]\n",
     "            # compute the derivative for weight[i]:\n",
-    "            derivative = feature_derivative(feature_matrix[:, i])\n",
+    "            derivative = feature_derivative(errors, feature_matrix[:, i])\n",
     "            # add the squared value of the derivative to the gradient sum of squares (for assessing convergence)\n",
-    "            gradient_sum_squares += math.sqrt(derivative)\n",
+    "            gradient_sum_squares = gradient_sum_squares + derivative*derivative\n",
     "            # subtract the step size times the derivative from the current weight\n",
-    "            weights = weights - step_size*derivative\n",
+    "            weights[i] = weights[i] - (step_size*derivative)\n",
     "        # compute the square-root of the gradient sum of squares to get the gradient magnitude:\n",
     "        gradient_magnitude = sqrt(gradient_sum_squares)\n",
     "        if gradient_magnitude < tolerance:\n",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -483,12 +483,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-46999.88716555    281.91211912]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = regression_gradient_descent(simple_feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print(weights)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -508,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -526,12 +537,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 356134.44317093  784640.86422788  435069.83652353 ...,  663418.65300782\n",
+      "  604217.10799338  240550.4743332 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted = predict_output(test_simple_feature_matrix, weights)\n",
+    "print(predicted)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -558,12 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.75400047593e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = predicted-test_data['price']\n",
+    "rss = (errors*errors).sum()\n",
+    "print(rss)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -581,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -604,12 +639,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -9.99999688e+04   2.45072603e+02   6.52795277e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights_multipler = regression_gradient_descent(feature_matrix, output, initial_weights, step_size, tolerance)\n",
+    "print(weights_multipler)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -620,12 +666,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 366651.41203656  762662.39786164  386312.09499712 ...,  682087.39928241\n",
+      "  585579.27865729  216559.20396617]\n"
+     ]
+    }
+   ],
+   "source": [
+    "(test_feature_matrix, output) = get_numpy_data(test_data, model_features, my_output)\n",
+    "predictedm = predict_output(test_feature_matrix, weights_multipler)\n",
+    "print(predictedm)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -636,12 +695,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "366651.412037\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = predictedm[0]\n",
+    "print(price)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -652,12 +722,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "310000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "price_1st_house = test_data['price'][0]\n",
+    "print(price_1st_house)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -675,12 +756,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rss: 2.70263446465e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = predictedm-output\n",
+    "rss = (errors*errors).sum()\n",
+    "print('rss: '+str(rss))"
+   ]
   },
   {
    "cell_type": "markdown",
