Add Polynomial_sframe function

--- a/ml-regression/Polynomial Regression/week-3-polynomial-regression-assignment-blank.ipynb
+++ b/ml-regression/Polynomial Regression/week-3-polynomial-regression-assignment-blank.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -51,11 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1491531747.log.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 3.0]\n",
+      "[1.0, 8.0, 27.0]\n"
+     ]
+    }
+   ],
    "source": [
     "tmp = graphlab.SArray([1., 2., 3.])\n",
     "tmp_cubed = tmp.apply(lambda x: x**3)\n",
@@ -72,11 +95,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "| power_1 |\n",
+      "+---------+\n",
+      "|   1.0   |\n",
+      "|   2.0   |\n",
+      "|   3.0   |\n",
+      "+---------+\n",
+      "[3 rows x 1 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ex_sframe = graphlab.SFrame()\n",
     "ex_sframe['power_1'] = tmp\n",
@@ -99,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +149,7 @@
     "    # initialize the SFrame:\n",
     "    poly_sframe = graphlab.SFrame()\n",
     "    # and set poly_sframe['power_1'] equal to the passed feature\n",
-    "\n",
+    "    poly_sframe['power_1'] = feature\n",
     "    # first check if degree > 1\n",
     "    if degree > 1:\n",
     "        # then loop over the remaining degrees:\n",
@@ -119,7 +158,7 @@
     "            # first we'll give the column a name:\n",
     "            name = 'power_' + str(power)\n",
     "            # then assign poly_sframe[name] to the appropriate power of feature\n",
-    "\n",
+    "            poly_sframe[name] = feature.apply(lambda x: x**power)\n",
     "    return poly_sframe"
    ]
   },
@@ -132,11 +171,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+---------+\n",
+      "| power_1 | power_2 | power_3 |\n",
+      "+---------+---------+---------+\n",
+      "|   1.0   |   1.0   |   1.0   |\n",
+      "|   2.0   |   4.0   |   8.0   |\n",
+      "|   3.0   |   9.0   |   27.0  |\n",
+      "+---------+---------+---------+\n",
+      "[3 rows x 3 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print polynomial_sframe(tmp, 3)"
    ]
