--- a/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-1-blank.ipynb
+++ b/ml-regression/Ridge Regression/week-4-ridge-regression-assignment-1-blank.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -56,14 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def polynomial_sframe(feature, degree):\n",
-    "    "
+    "    poly_sframe = graphlab.SFrame()\n",
+    "    poly_sframe['power_1'] = feature\n",
+    "    if degree > 1:\n",
+    "        for power in range(2, degree+1):\n",
+    "            name = 'power_'+str(power)\n",
+    "            poly_sframe[name] = feature.apply(lambda x: x**power)\n",
+    "    return poly_sframe    "
    ]
   },
   {
@@ -75,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -87,11 +93,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1492388007.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -105,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -123,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -145,12 +166,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 21613</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 21613"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 15</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 15</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 16</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Newton Method</pre>"
+      ],
+      "text/plain": [
+       "Starting Newton Method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 1.067869     | 2662555.738027     | 245656.462165 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 1.067869     | 2662555.738027     | 245656.462165 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>SUCCESS: Optimal solution found.</pre>"
+      ],
+      "text/plain": [
+       "SUCCESS: Optimal solution found."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre></pre>"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">167924.857726</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_1</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">103.090951289</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_2</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.13460455096</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_3</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-0.000129071363752</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_4</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">5.18928955754e-08</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_5</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-7.77169299595e-12</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_6</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1.71144842837e-16</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_7</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">4.51177958161e-20</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_8</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-4.78839816249e-25</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">power_9</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-2.33343499941e-28</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">nan</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[16 rows x 4 columns]<br/>Note: Only the head of the SFrame is printed.<br/>You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\tindex\tstr\n",
+       "\tvalue\tfloat\n",
+       "\tstderr\tfloat\n",
+       "\n",
+       "Rows: 16\n",
+       "\n",
+       "Data:\n",
+       "+-------------+-------+--------------------+--------+\n",
+       "|     name    | index |       value        | stderr |\n",
+       "+-------------+-------+--------------------+--------+\n",
+       "| (intercept) |  None |   167924.857726    |  nan   |\n",
+       "|   power_1   |  None |   103.090951289    |  nan   |\n",
+       "|   power_2   |  None |   0.13460455096    |  nan   |\n",
+       "|   power_3   |  None | -0.000129071363752 |  nan   |\n",
+       "|   power_4   |  None | 5.18928955754e-08  |  nan   |\n",
+       "|   power_5   |  None | -7.77169299595e-12 |  nan   |\n",
+       "|   power_6   |  None | 1.71144842837e-16  |  nan   |\n",
+       "|   power_7   |  None | 4.51177958161e-20  |  nan   |\n",
+       "|   power_8   |  None | -4.78839816249e-25 |  nan   |\n",
+       "|   power_9   |  None | -2.33343499941e-28 |  nan   |\n",
+       "+-------------+-------+--------------------+--------+\n",
+       "[16 rows x 4 columns]\n",
+       "Note: Only the head of the SFrame is printed.\n",
+       "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly15_data = polynomial_sframe(sales['sqft_living'], 15)\n",
+    "my_features = poly15_data.column_names()\n",
+    "poly15_data['price'] = sales['price']\n",
+    "\n",
+    "model15 = graphlab.linear_regression.create(poly15_data, target='price', features=my_features, \n",
+    "                                            validation_set=None, l2_penalty=l2_small_penalty)\n",
+    "model15.get('coefficients')"
+   ]
   },
   {
    "cell_type": "markdown",
